fix lang on mobile

--- a/style.css
+++ b/style.css
@@ -1061,6 +1061,19 @@ ol.breadcrumb li:last-child {
 	.header__main__lang {
 		margin-left: 5px
 	}
+
+	.header__main .header__main__lang {
+		display: none;
+	}
+
+	.header__main__lang-item.active {
+		color: #fff;
+	}
+
+	.header__main__lang-item:not(:last-child)::after {
+		top: 0;
+		background-color: #fff;
+	}
 }
 
 @media (max-width: 400px) {
@@ -1447,7 +1460,7 @@ ol.breadcrumb li:last-child {
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
-		width: 200px;
+		/* width: 200px; */
 
 	}
 
